# src/main/java/br/com/peoplemanager/dto/person/PersonRequestDto.java
@@ -1,0 +1,16 @@
+package br.com.peoplemanager.dto.person;
+
+import jakarta.validation.constraints.NotEmpty;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+
+@Data
+@AllArgsConstructor
+@Builder
+public class PersonRequestDto {
+    @NotEmpty
+    private String fullName;
+    @NotEmpty
+    private String birthDate;
+}
