# src/main/java/br/com/peoplemanager/entity/Person.java
@@ -1,0 +1,25 @@
+package br.com.peoplemanager.entity;
+
+import jakarta.persistence.*;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+import java.time.LocalDate;
+
+@Entity
+@Data
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+public class Person {
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    @Column(name = "PERSON_ID")
+    private Long personId;
+    @Column(name = "FULL_NAME")
+    private String fullName;
+    @Column(name = "BIRTH_DATE")
+    private LocalDate birthDate;
+}
